# CCSC-CTF-2022

./: .gitignore  README.md
beginners/: README.md
beginners/crypto_1/: README.md
beginners/crypto_2/: README.md
beginners/reverse_1/: README.md
cloud/CloudMe/: README.md
cloud/Villains/: README.md
crypto/Rick_Derivation_Functions/: README.md
crypto/anatomy-park/: README.md  docker-build.sh  docker-run.sh
crypto/cathode-ray-thruster/: README.md  docker-build.sh  docker-run.sh
crypto/cathode-ray-thruster/setup/: .dockerignore  Dockerfile  challenge.py  flag.txt  generate-rsa-params.sh  private-key.pem  pyproject.toml
crypto/dimension-secp-256k/: README.md
crypto/get_schwifty/: README.md  docker-build.sh  docker-run.sh
crypto/supersingular-finite-curve/: README.md
forensics/BirdLanguage/: README.md  docker-build.sh  docker-run.sh
forensics/FakeDoor/: README.md
forensics/SumoRick_I/: README.md
forensics/SumoRick_II/: README.md
forensics/ricklantis/: README.md
forensics/the_citadel_of_ricks/: README.md
misc/CUBIK_RICK/: README.md  docker-build.sh  docker-run.sh
misc/Pokemon-Adventure/: README.md
misc/pickle-rick/: README.md  docker-build.sh  docker-run.sh
misc/pickle-rick-ii/: README.md
misc/rickys-pass/: README.md
pwn/automated_pwn/: .gitignore  README.md  docker-build.sh  docker-run.sh
pwn/babytcache/: README.md  docker-build.sh  docker-run.sh
pwn/custom_heap_allocator/: README.md  docker-build.sh  docker-run.sh  makefile
pwn/forking/: docker-build.sh  (+2 more)
web/portal-gun/setup/portal-svc/: Dockerfile  app.py  pyproject.toml
(+281 files in other folders)
